# github-issues-to-kb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/github_issues_to_kb/: __init__.py  cli.py  exporter.py  markdown.py
